<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_Plus">+</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_Minus">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_Divide">/</string>
    <string name="button_Clear">CE</string>
    <string name="button_0">0</string>
    <string name="button_Dot">.</string>
    <string name="button_Multiply">X</string>
    <string name="button_Equals">=</string>
</resources>
